--- a/src/components/navbar/NavbarStyles.css
+++ b/src/components/navbar/NavbarStyles.css
@@ -38,6 +38,11 @@
     width: 50px;
     height: 50px;
     margin: 10px 0 0 10px;
+    transition: transform 0.3s ease;
+}
+
+.navbar__logo:hover {
+    transform: scale(1.2);
 }
 
 .navbar__buttons .login-signup-button {
