--- a/src/pages/calculator/CalculatorStyles.css
+++ b/src/pages/calculator/CalculatorStyles.css
@@ -4,6 +4,9 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
+    background-color: #333;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
 }
 
 .calculator-display {
