--- a/src/pages/Home/calculator-section/CalculatorSectionStyles.css
+++ b/src/pages/Home/calculator-section/CalculatorSectionStyles.css
@@ -3,10 +3,19 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
+    padding: 20px;
+    background-color: #f5f5f5;
+}
+
+.calculator-section p {
+    margin-bottom: 20px;
+    font-size: 18px;
+    line-height: 1.5;
 }
 
 .calculator-section__buttons {
+    width: 100%;
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
 }
