--- a/src/pages/Home/footer-section/FooterSectionStyles.css
+++ b/src/pages/Home/footer-section/FooterSectionStyles.css
@@ -4,6 +4,13 @@
     padding: 20px;
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 140px;
+    z-index: 999;
 }
 
 .footer-section__title {
@@ -33,4 +40,15 @@
     margin-right: 10px;
     color: #fff;
     text-decoration: none;
+}
+
+.footer-section__social-links a {
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.footer-section__social-links img {
+    width: 20px;
+    height: 20px;
+    vertical-align: middle;
 }
