--- a/src/pages/Home/weather-section/WeatherSectionStyles.css
+++ b/src/pages/Home/weather-section/WeatherSectionStyles.css
@@ -4,6 +4,7 @@
     padding: 20px;
     background-color: #f2f2f2;
     border-radius: 8px;
+    min-height: calc(100vh - 160vh);
 }
 
 .weather-section__title {
